# Crypted-Data-Share-Through-GMAIL

./: .gitignore  README.md  crypted_mail.spec  pyproject.toml
.github/workflows/: windows-release.yml
installer/: crypted_mail.iss
scripts/: build_installer.ps1  build_windows.ps1  generate_icon.py
src/crypted_mail/: __init__.py  client.py  config.py
src/crypted_mail/assets/: __init__.py
src/crypted_mail/core/: __init__.py  crypto.py  envelope.py  exceptions.py  keys.py  models.py
src/crypted_mail/desktop/: __init__.py  main.py  window.py
src/crypted_mail/services/: __init__.py  app_context.py  key_service.py  mail_service.py  storage.py
tests/: conftest.py  test_crypto.py  test_services.py  test_ui.py
