[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypted-mail"
version = "0.1.0"
description = "A Python library for encrypting text and sending it through Gmail from notebooks and scripts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Ali"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "google-api-python-client>=2.169.0",
  "google-auth>=2.39.0",
  "google-auth-oauthlib>=1.2.2",
  "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
